Support server-side Terraform as cloud resource provider  (#1519)
* Support server-side Terraform as cloud resource provider

Provide another schematic `Terraform` to provision cloud
resource.

Fix #698

* make namespace optional
add unit-tests

* support vela show to generate componentdefinition usage

* add unit-tests

* tidy go mod

* clean go mod and updated go sum

* Remove `variable` from `properties` of Terraform compoent

* don't literally set component catagory

* refine error message when a capability could not be found

* fix ut

* Code refactor and add unittests

* fix ci issues

* Update references/plugins/references.go

Co-authored-by: Jianbo Sun <wonderflow.sun@gmail.com>

* add test cases

* fix ci issue

* revert lowercase of "Properties"

* fix ci issue

* add ut for appfile

* fix e2e issue

* add docs

* fix official site build

Co-authored-by: Jianbo Sun <wonderflow.sun@gmail.com>

--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -665,6 +665,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for workload
@@ -923,6 +939,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for trait
@@ -1118,6 +1150,22 @@ spec:
                                   x-kubernetes-preserve-unknown-fields: true
                               required:
                               - template
+                              type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
                               type: object
                           type: object
                         status:
@@ -1822,6 +1870,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for workload
@@ -2081,6 +2145,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for trait
@@ -2276,6 +2356,22 @@ spec:
                                   x-kubernetes-preserve-unknown-fields: true
                               required:
                               - template
+                              type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
                               type: object
                           type: object
                         status:
