--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -667,6 +667,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for workload
@@ -925,6 +941,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for trait
@@ -1120,6 +1152,22 @@ spec:
                                   
                               required:
                               - template
+                              type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
                               type: object
                           type: object
                         status:
@@ -1819,6 +1867,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for workload
@@ -2078,6 +2142,22 @@ spec:
                               required:
                               - template
                               type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
+                              type: object
                           type: object
                         status:
                           description: Status defines the custom health policy and status message for trait
@@ -2273,6 +2353,22 @@ spec:
                                   
                               required:
                               - template
+                              type: object
+                            terraform:
+                              description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                              properties:
+                                configuration:
+                                  description: Configuration is Terraform Configuration
+                                  type: string
+                                type:
+                                  default: hcl
+                                  description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                                  enum:
+                                  - hcl
+                                  - json
+                                  type: string
+                              required:
+                              - configuration
                               type: object
                           type: object
                         status:
