--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -14,6 +14,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Clean md files
+        run: python ./hack/website/clean-md.py ./docs/en
       - name: Test Build
         env:
           VERSION: ${{ github.ref }}
