--- a/.github/workflows/release-docs.yaml
+++ b/.github/workflows/release-docs.yaml
@@ -14,6 +14,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Clean md files
+        run: python ./hack/website/clean-md.py ./docs/en
       - name: Sync to kubevela.io Repo
         env:
           SSH_DEPLOY_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
