Rename file name for trait "cpusclaer" and "scaler"
As the file name (.cue/.yaml) of trait "cpusclaer" and "scaler"
are "cpuhpa" and "manaualscale" respectively, renmae them in
order to avoid confustions

--- a/charts/vela-core/templates/defwithtemplate/cpuscaler.yaml
+++ b/charts/vela-core/templates/defwithtemplate/cpuscaler.yaml
@@ -13,7 +13,7 @@ spec:
   schematic:
     cue:
       template: |
-        outputs: cpuhpa: {
+        outputs: cpuscaler: {
         	apiVersion: "autoscaling/v2beta2"
         	kind:       "HorizontalPodAutoscaler"
         	metadata: name: context.name
