--- a/docs/examples/app-with-volumes/td-awsEBS.yaml
+++ b/docs/examples/app-with-volumes/td-awsEBS.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: vela-system
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |
