--- a/docs/examples/application/template.yaml
+++ b/docs/examples/application/template.yaml
@@ -59,8 +59,7 @@ metadata:
   name: scaler
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |-
@@ -80,8 +79,7 @@ metadata:
   name: sidecar
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |-
@@ -103,8 +101,7 @@ metadata:
   name: kservice
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |-
