--- a/docs/examples/live-diff/definitions/myscaler.yaml
+++ b/docs/examples/live-diff/definitions/myscaler.yaml
@@ -6,8 +6,7 @@ metadata:
   name: myscaler
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
