--- a/docs/examples/registry/manualscale.yaml
+++ b/docs/examples/registry/manualscale.yaml
@@ -7,8 +7,7 @@ metadata:
   name: crd-manul-scaler
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
