--- a/docs/examples/registry/rollout.yaml
+++ b/docs/examples/registry/rollout.yaml
@@ -7,7 +7,7 @@ metadata:
     definition.oam.dev/description: "Configures Canary deployment strategy for your application."
 spec:
   appliesToWorkloads:
-    - webservice
+    - deployments.apps
   definitionRef:
     name: canaries.flagger.app
   workloadRefPath: spec.targetRef
