--- a/references/appfile/dryrun/testdata/diff-apprevision.yaml
+++ b/references/appfile/dryrun/testdata/diff-apprevision.yaml
@@ -254,8 +254,7 @@ spec:
       metadata: {}
       spec:
         appliesToWorkloads:
-        - webservice
-        - worker
+          - deployments.apps
         definitionRef:
           name: manualscalertraits.core.oam.dev
         schematic:
