--- a/references/plugins/testdata/ingressDef.yaml
+++ b/references/plugins/testdata/ingressDef.yaml
@@ -4,8 +4,7 @@ metadata:
   name: ingress.test
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   extension:
     template: |
       parameter: {
