--- a/docs/examples/registry/autoscale.yaml
+++ b/docs/examples/registry/autoscale.yaml
@@ -7,8 +7,7 @@ metadata:
     definition.oam.dev/description: "Automatically scales workloads by resource utilization metrics or cron triggers."
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: autoscalers.standard.oam.dev
