--- a/docs/examples/registry/dynamic-sa.yaml
+++ b/docs/examples/registry/dynamic-sa.yaml
@@ -6,8 +6,7 @@ metadata:
   name: service-account
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |-
