--- a/docs/examples/registry/kautoscale.yaml
+++ b/docs/examples/registry/kautoscale.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: vela-system
 spec:
   appliesToWorkloads:
-    - webservice # this should be some knative like workload
+    - deployments.apps
   podDisruptive: true
   schematic:
     cue:
