--- a/docs/examples/registry/podenv.yaml
+++ b/docs/examples/registry/podenv.yaml
@@ -7,8 +7,7 @@ metadata:
   namespace: vela-system
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |-
