--- a/docs/examples/registry/route.yaml
+++ b/docs/examples/registry/route.yaml
@@ -7,8 +7,7 @@ metadata:
     definition.oam.dev/description: "Configures external access to your service."
 spec:
   appliesToWorkloads:
-    - webservice
-  workloadRefPath: spec.workloadRef
+    - deployments.apps
   definitionRef:
     name: routes.standard.oam.dev
   podDisruptive: false
