--- a/docs/examples/terraform/cloud-resource-provision-and-consume/TraitDefinition-service-binding.yaml
+++ b/docs/examples/terraform/cloud-resource-provision-and-consume/TraitDefinition-service-binding.yaml
@@ -6,8 +6,7 @@ metadata:
   name: service-binding
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |
