--- a/hack/vela-templates/definitions/cpuscaler.yaml
+++ b/hack/vela-templates/definitions/cpuscaler.yaml
@@ -7,8 +7,7 @@ metadata:
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   schematic:
     cue:
       template: |
