--- a/hack/vela-templates/definitions/ingress.yaml
+++ b/hack/vela-templates/definitions/ingress.yaml
@@ -23,8 +23,7 @@ spec:
     healthPolicy: |
       isHealth: len(context.outputs.service.spec.clusterIP) > 0
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
   podDisruptive: false
   schematic:
     cue:
