--- a/references/plugins/testdata/manualscalars.yaml
+++ b/references/plugins/testdata/manualscalars.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: default
 spec:
   appliesToWorkloads:
-    - core.oam.dev/v1alpha2.ContainerizedWorkload
-    - apps/v1.Deployment
+    - deployments.apps
+    - containerizedworkloads.core.oma.dev
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
