--- a/hack/vela-templates/definitions/cpuscaler.yaml
+++ b/hack/vela-templates/definitions/cpuscaler.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "configure k8s HPA with CPU metrics for Deployment"
+    definition.oam.dev/description: "Automatically scale the component based on CPU usage."
   name: cpuscaler
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
