--- a/docs/examples/git-repo/gitrepo-kind.yaml
+++ b/docs/examples/git-repo/gitrepo-kind.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
   name: podinfo
-  namespace: gitops-system
+  namespace: default
 spec:
   interval: 1m
   url: https://github.com/wangyuan249/podinfo
