--- a/charts/vela-core/templates/definitions/autodetect.yaml
+++ b/charts/vela-core/templates/definitions/autodetect.yaml
@@ -1,8 +1,10 @@
 apiVersion: core.oam.dev/v1beta1
 kind: WorkloadDefinition
 metadata:
-  name: autodetect.core.oam.dev
+  annotations:
+    definition.oam.dev/description: "autodetects.core.oam.dev is the default workload type of ComponentDefinition"
+  name: autodetects.core.oam.dev
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   definitionRef:
-    name: autodetect.core.oam.dev
+    name: autodetects.core.oam.dev
