enchance test case and add function in show -web
fmt and vet

fix

fix522

--- a/references/plugins/testdata/kube-worker.yaml
+++ b/references/plugins/testdata/kube-worker.yaml
@@ -32,3 +32,8 @@ spec:
           type: string
           fieldPaths:
             - "spec.template.spec.containers[0].image"
+        - name: port
+          required: true
+          type: string
+          fieldPaths:
+            - "spec.template.spec.containers[0].ports[0].containerPort"
