--- a/charts/vela-core/crds/core.oam.dev_policydefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_policydefinitions.yaml
@@ -35,6 +35,18 @@ spec:
           spec:
             description: PolicyDefinitionSpec defines the desired state of PolicyDefinition
             properties:
+              definitionRef:
+                description: Reference to the CustomResourceDefinition that defines this trait kind.
+                properties:
+                  name:
+                    description: Name of the referenced CustomResourceDefinition.
+                    type: string
+                  version:
+                    description: Version indicate which version should be used if CRD has multiple versions by default it will use the first one if not specified
+                    type: string
+                required:
+                - name
+                type: object
               schematic:
                 description: Schematic defines the data format and template of the encapsulation of the policy definition
                 properties:
@@ -154,6 +166,21 @@ spec:
                   - type
                   type: object
                 type: array
+              latestRevision:
+                description: LatestRevision of the component definition
+                properties:
+                  name:
+                    type: string
+                  revision:
+                    format: int64
+                    type: integer
+                  revisionHash:
+                    description: RevisionHash record the hash value of the spec of ApplicationRevision object.
+                    type: string
+                required:
+                - name
+                - revision
+                type: object
             type: object
         type: object
     served: true
