--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -79,7 +79,7 @@ admissionWebhooks:
     enabled: false
 
 #Enable debug logs for development purpose
-logDebug: true
+logDebug: false
 
 systemDefinitionNamespace: vela-system
 
